# ACGS

./: .coveragerc  .cross_reference_cache.json  .cross_reference_config.yaml  .env.acgs  .env.acgs.example  .env.example  .env.groq  .env.production  .env.sentry.example  .env.template  .gitattributes  .gitignore  .gitlab-ci_20250701_000659.yml  .gitleaks.toml  .gitmodules  .gitsecrets  .markdownlint.json  .npmrc  .pre-commit-config.yaml  .secrets.baseline  .uvignore  .windsurfrules  =0.104.0  =0.21.0  =0.24.0  =0.25.0  =1.0.0  =1.24.0  =1.3.0  =1.7.4  =2.1.0  =2.5.0  =23.2.0  =3.3.0  =4.5.0  =4.6.0  =41.0.0  =6.0.1  =8.11.0  ACGE_API_DOCUMENTATION.yaml  (+679 more)
blockchain/: .cargo-audit.toml  ACGS-1_Validation_Report.md  Anchor.toml  COST_OPTIMIZATION_CONFIG.json  Cargo.toml  FINAL_REMEDIATION_REPORT.json  README.md  SECURITY_CHANGELOG.md  SECURITY_FINAL_STATUS.md  audit.toml  constitution_data.json  constitution_initialization_report_devnet.json  deny.toml  devnet_program_ids.json  devnet_validation_report_devnet.json  governance_accounts.json  initial_policies.json  package-lock.json  package.json  performance_benchmark.json  program_ids.json  quantumagi_demo_report_20250607_202021.json  quantumagi_demo_report_20250613_011710.json  quantumagi_demo_report_20250613_224018.json  rustfmt.toml  test_advanced_caching_strategy.js  test_anchor_program_coverage.js  test_comprehensive_performance_validation.py  test_concurrent_processing.py  test_constitutional_compliance_optimization.js  test_core_services_unit_coverage.py  test_database_performance_optimization.py  test_database_performance_simulation.py  test_end_to_end_integration.js  test_governance_init.js  test_logging_program.js  test_pgc_validation.js  test_policy_synthesis_optimization.js  test_transaction_costs.js  validate_quantumagi_deployment.js
blockchain/.anchor/test-ledger/: faucet-keypair.json  genesis.tar.bz2  stake-account-keypair.json  test-ledger-log.txt  validator-keypair.json  vote-account-keypair.json
blockchain/client/python/: solana_client.py
blockchain/client/rust/: Cargo.toml  TEST_COVERAGE_REPORT.md
blockchain/docs/: OPERATIONAL_RUNBOOKS.md
blockchain/keys/: key_registry.json
blockchain/programs/appeals/: Cargo.toml
blockchain/programs/logging/: Cargo.toml
blockchain/programs/quantumagi-core/: Cargo.toml
blockchain/programs/quantumagi_core/: Cargo.toml
blockchain/scripts/: Cargo.toml  advanced_features_demo.py  cost_optimization.js  demo_end_to_end.py  deploy_quantumagi.py  deploy_quantumagi.rs  deploy_to_devnet.sh  final_remediation.js  fix_test_infrastructure.ts  generate_program_ids.py  initialize_constitution.py  initialize_constitution.rs  key_management.rs  quantumagi_advanced_features_report_20250607_164848.json  quantumagi_demo_report_20250607_164654.json  rust_tools_ci_report.json  test_rust_tools_ci.sh  transaction_optimizer.py  validate_deployment.rs  validate_devnet_deployment.py
blockchain/test-ledger/: faucet-keypair.json  genesis.tar.bz2  snapshot-6700-66kiUz2iRqbzSVWky92sArvV5NdHPE8bwmwtdBuHwAAz.tar.zst  snapshot-6800-46ZVpWaq66LXnPbK8kbioZV1FERNsQvPoJE1cafk6VY8.tar.zst  stake-account-keypair.json  validator-keypair.json  vote-account-keypair.json
blockchain/test-ledger/rocksdb/: IDENTITY  LOG  LOG.old.1750172099728657  MANIFEST-000063
blockchain/tests/: appeals_comprehensive.js  appeals_comprehensive.ts  edge_cases.ts  governance_integration.js  governance_integration.ts  logging_comprehensive.ts  quantumagi-core_comprehensive.js  quantumagi-core_comprehensive.ts  quantumagi_core.js  quantumagi_core.ts  quantumagi_core_corrected.js  quantumagi_core_corrected.ts  quantumagi_core_enhanced.ts  test_setup_helper.js  test_setup_helper.ts  transaction_optimization.ts  validation_test.js
config/environments/: .env.acgs  .env.development  .env.example  .env.production-complete  .env.template  CLAUDE.md  acgs.env  acgs.example.env  development.env  development.json  integrity.env  kind-config.yaml  pnpm-workspace.yaml  production-standardized.env  production.json  production.template.env  pyproject.toml  pytest.benchmark.ini  pytest.ini  requirements-security.txt  staging.env  staging.json  template.env  test.env
config/environments/development/: .env
config/environments/production/: .env
frontend-rust/: Cargo.toml  OPTIMIZATION_SUMMARY.md  PERFORMANCE_OPTIMIZATION_REPORT.md  README.md  Trunk.toml  index.html  package.json  playwright.config.js
frontend-rust/assets/: sw.js
frontend-rust/monitoring/: alert_rules.yml  prometheus.yml
frontend-rust/scripts/: build.sh  deploy-staging.sh  load-test.sh  test-accessibility.sh  test-e2e.sh
frontend-rust/src/: api.rs  app.rs  cache_manager.rs  hooks.rs  lib.rs  performance.rs  router.rs  state.rs  types.rs  utils.rs
frontend-rust/src/components/: advanced_navigation.rs  constitutional.rs  dashboard.rs  error_boundary.rs  layout.rs  mod.rs  navigation.rs  preferences.rs  ui.rs
frontend-rust/src/services/: api_client.rs  mod.rs  websocket.rs
frontend-rust/src/store/: mod.rs
frontend-rust/styles/: main.css
frontend-rust/tests/: integration_tests.rs
frontend-rust/tests/e2e/: critical-paths.spec.js  global-setup.js  global-teardown.js  visual-regression.spec.js
services/blockchain/: .cargo-audit.toml  ANCHOR_TEST_SUITE_VALIDATION_REPORT.md  Anchor.toml  CLAUDE.md  COMPREHENSIVE_IMPROVEMENT_REPORT.md  COST_OPTIMIZATION_CONFIG.json  Cargo.toml  FINAL_REMEDIATION_REPORT.json  Makefile  ORGANIZATION_SUMMARY.md  README.md  TEST_METHOD_CORRECTIONS.md  TEST_REMEDIATION_REPORT.json  TEST_VALIDATION_REPORT.md  audit.toml  blockchain_improvement_report.json  build.sh  constitution_data.json  cost_effectiveness_analysis.json  deny.toml  devnet_program_ids.json  initial_policies.json  package.json  program_ids.json  run_tests.js  rustfmt.toml  test_comprehensive_performance_validation.py  test_concurrent_processing.py  test_core_services_unit_coverage.py  test_database_performance_optimization.py  test_database_performance_simulation.py  test_demo.js  test_logging_program.js  tsconfig.json
services/blockchain/artifacts/: CLAUDE.md
(+11052 files in other folders)
