# Constitutional Hash: cdd01ef066bc6cf2
[workspace]
resolver = "2"
members = [
    "services/blockchain/programs/quantumagi-core",
    "services/blockchain/programs/appeals", 
    "services/blockchain/programs/logging",
    "services/ai-governance/pocketflow-rust",
]

[workspace.dependencies]
anchor-lang = "0.29.0"
anchor-spl = "0.29.0"
solana-program = "~1.18.22"
