[build-system]
requires = [ "hatchling",]
build-backend = "hatchling.build"

[project]
name = "acgs-pgp"
version = "3.0.0"
description = "ACGS-PGP: Advanced Constitutional Governance System with Pragmatic Governance Protocol"
readme = "README.md"
license = "Apache-2.0"
requires-python = ">=3.10"
keywords = [ "acgs", "constitutional", "governance", "ai", "blockchain", "solana", "monorepo", "workspace",]
classifiers = [ "Development Status :: 4 - Beta", "Intended Audience :: Developers", "License :: OSI Approved :: Apache Software License", "Operating System :: OS Independent", "Programming Language :: Python :: 3", "Programming Language :: Python :: 3.11", "Programming Language :: Python :: 3.12", "Topic :: Scientific/Engineering :: Artificial Intelligence", "Topic :: Software Development :: Libraries :: Python Modules",]
dependencies = [ "fastapi>=0.115.6", "uvicorn[standard]>=0.34.0", "pydantic>=2.10.5", "pydantic-settings>=2.7.1", "httpx>=0.28.1", "redis>=5.0.1", "asyncpg>=0.29.0", "sqlalchemy[asyncio]>=2.0.23", "alembic>=1.13.0", "cryptography>=45.0.4", "pyjwt[crypto]>=2.10.0", "python-jose[cryptography]>=3.3.0", "prometheus-client>=0.19.0", "opentelemetry-api>=1.34.1", "opentelemetry-sdk>=1.34.1", "anthropic>=0.8.0", "openai>=1.3.0", "groq>=0.4.0", "torch>=2.7.1", "transformers>=4.35.0", "aiohttp>=3.9.0", "aiofiles>=23.0.0", "python-dotenv>=1.0.0", "pyyaml>=6.0.1", "click>=8.1.7", "rich>=13.6.0", "typer>=0.9.0",]
dynamic = []
[[project.authors]]
name = "ACGS Team"
email = "info@soln.ai"

[[project.authors]]
name = "Martin Lyu"
email = "info@soln.ai"

[project.optional-dependencies]
dev = [ "pytest>=7.4.3", "pytest-asyncio>=0.21.1", "pytest-cov>=4.1.0", "pytest-mock>=3.14.1", "pytest-xdist>=3.7.0", "pytest-faker>=2.0.0", "coverage[toml]>=7.3.2", "black>=23.11.0", "isort>=5.12.0", "ruff>=0.1.6", "mypy>=1.7.0", "pre-commit>=3.4.0", "bandit>=1.7.5", "safety>=2.3.0", "locust>=2.17.0", "memory-profiler>=0.61.0",]
test = [ "pytest>=7.4.3", "pytest-asyncio>=0.21.1", "pytest-cov>=4.1.0", "pytest-mock>=3.14.1", "pytest-xdist>=3.7.0", "pytest-faker>=2.0.0", "httpx>=0.28.1", "faker>=19.0.0", "coverage[toml]>=7.3.2", "factory-boy>=3.3.0", "responses>=0.23.3", "freezegun>=1.2.2",]
ml = [ "scikit-learn>=1.3.0", "xgboost>=1.7.0", "lightgbm>=4.0.0", "optuna>=3.3.0", "mlflow>=2.6.0", "wandb>=0.15.0", "tensorboard>=2.14.0",]
blockchain = [ "web3>=6.9.0", "eth-account>=0.9.0", "solana>=0.30.0", "solders>=0.18.0",]
docs = [ "sphinx>=7.1.0", "sphinx-rtd-theme>=1.3.0", "myst-parser>=2.0.0", "sphinx-autodoc-typehints>=1.24.0", "sphinx-copybutton>=0.5.2",]
prod = [ "gunicorn>=21.2.0", "supervisor>=4.2.5",]
all = [ "acgs-pgp[dev,test,ml,blockchain,docs,prod]",]

[project.urls]
Homepage = "https://github.com/CA-git-com-co/ACGS"
Documentation = "https://github.com/CA-git-com-co/ACGS/tree/master/integrations/data-flywheel"
Repository = "https://github.com/CA-git-com-co/ACGS.git"
Issues = "https://github.com/CA-git-com-co/ACGS/issues"

[project.scripts]
acgs = "services.cli.main:app"
acgs-server = "services.main:main"
acgs-worker = "services.worker.main:main"
acgs-migrate = "services.database.migrate:main"

[tool.black]
line-length = 88
target-version = [ "py310", "py311", "py312",]
include = "\\.pyi?$"
extend-exclude = "/(\n  # directories\n  \\.eggs\n  | \\.git\n  | \\.hg\n  | \\.mypy_cache\n  | \\.tox\n  | \\.venv\n  | build\n  | dist\n)/\n"

[tool.isort]
profile = "black"
line_length = 88
multi_line_output = 3
include_trailing_comma = true
force_grid_wrap = 0
use_parentheses = true
ensure_newline_before_comments = true

[tool.mypy]
python_version = "3.10"
strict = true
warn_return_any = true
warn_unused_configs = true
disallow_any_generics = true
disallow_subclassing_any = true
disallow_untyped_calls = true
disallow_untyped_defs = true
disallow_incomplete_defs = true
check_untyped_defs = true
disallow_untyped_decorators = true
no_implicit_optional = true
warn_redundant_casts = true
warn_unused_ignores = true
warn_no_return = true
warn_unreachable = true
strict_equality = true
strict_concatenate = true
disallow_any_unimported = true
disallow_any_expr = false
disallow_any_decorated = false
show_error_codes = true
show_column_numbers = true
pretty = true
color_output = true
[[tool.mypy.overrides]]
module = [ "celery.*", "kombu.*", "elasticsearch.*", "pymongo.*", "motor.*", "redis.*", "prometheus_client.*", "anthropic.*", "openai.*", "google.*", "groq.*", "torch.*", "transformers.*", "sentence_transformers.*", "sklearn.*", "xgboost.*", "lightgbm.*", "optuna.*", "mlflow.*", "wandb.*",]
ignore_missing_imports = true

[[tool.mypy.overrides]]
module = [ "services.core.*", "services.shared.*",]
disallow_any_generics = true
disallow_untyped_defs = true

[tool.ruff]
target-version = "py310"
line-length = 88
preview = true
show-fixes = true
output-format = "grouped"
select = [ "E", "W", "F", "I", "B", "C4", "UP", "N", "S", "T20", "PT", "RET", "SIM", "ARG", "PTH", "ERA", "PL", "RUF", "A", "BLE", "C90", "DJ", "DTZ", "EM", "FBT", "G", "ICN", "INP", "ISC", "LOG", "PERF", "PIE", "Q", "RSE", "SLF", "SLOT", "TID", "TCH", "TRY", "FLY", "NPY", "PD", "FURB",]
ignore = [ "E501", "B008", "C901", "S101", "S603", "S607", "PLR0913", "PLR0915", "PLR2004", "RUF012", "FBT001", "FBT002", "EM101", "EM102", "TRY003", "G004", "DJ008",]

[tool.bandit]
exclude_dirs = [ "tests", "test_*", "*_test.py", "docs", "migrations", ".pytest_cache", "__pycache__",]
skips = [ "B101", "B601", "B603",]
tests = [ "B102", "B103", "B104", "B105", "B106", "B107", "B108", "B110", "B112", "B201", "B301", "B302", "B303", "B304", "B305", "B306", "B307", "B308", "B309", "B310", "B311", "B312", "B313", "B314", "B315", "B316", "B317", "B318", "B319", "B320", "B321", "B322", "B323", "B324", "B325", "B401", "B402", "B403", "B404", "B405", "B406", "B407", "B408", "B409", "B410", "B411", "B412", "B413", "B501", "B502", "B503", "B504", "B505", "B506", "B507", "B601", "B602", "B604", "B605", "B606", "B607", "B608", "B609", "B610", "B611", "B701", "B702", "B703",]
confidence = "HIGH"
severity = "MEDIUM"

[tool.uv]
index-strategy = "unsafe-best-match"
resolution = "highest"
compile-bytecode = true

[tool.acgs]
constitutional_hash = "cdd01ef066bc6cf2"
version = "2.0.0"
last_updated = "2025-07-02T20:21:18.940076+00:00"
dependency_manager = "uv"
security_scan_enabled = true

[tool.ruff.per-file-ignores]
"__init__.py" = [ "F401",]
"tests/*" = [ "B011", "S101", "ARG001", "PLR2004",]
"scripts/*" = [ "T20", "S603", "S607",]
"**/conftest.py" = [ "F401", "F403",]

[tool.ruff.isort]
known-first-party = [ "services", "scripts", "tools", "core",]
force-single-line = false
combine-as-imports = true
split-on-trailing-comma = true

[tool.ruff.flake8-pytest-style]
fixture-parentheses = false
mark-parentheses = false

[tool.ruff.pylint]
max-args = 10
max-branches = 15
max-returns = 8
max-statements = 60

[tool.hatch.metadata]
allow-direct-references = true

[tool.pytest.ini_options]
minversion = "7.4"
addopts = [ "-ra", "-q", "--strict-markers", "--strict-config", "--tb=short", "--maxfail=10", "--cov=services", "--cov-report=term-missing", "--cov-report=html:htmlcov", "--cov-report=xml", "--cov-fail-under=80", "--durations=10", "--junitxml=reports/junit.xml",]
testpaths = [ "tests", "services",]
python_files = [ "test_*.py", "*_test.py",]
python_classes = [ "Test*",]
python_functions = [ "test_*",]
markers = [ "slow: marks tests as slow (deselect with '-m \"not slow\"')", "integration: marks tests as integration tests", "unit: marks tests as unit tests", "e2e: marks tests as end-to-end tests", "performance: marks tests as performance tests", "security: marks tests as security tests", "benchmark: marks tests as benchmark tests", "constitutional: marks tests related to constitutional governance", "timeout: set a timeout for a test", "gpu: marks tests that require GPU", "network: marks tests that require network access", "database: marks tests that require database", "redis: marks tests that require Redis", "ci: marks tests that should run in CI", "local: marks tests that should only run locally", "smoke: marks smoke tests for quick validation", "regression: marks regression tests",]
filterwarnings = [ "ignore::DeprecationWarning", "ignore::PendingDeprecationWarning", "ignore::pytest.PytestUnraisableExceptionWarning", "ignore::UserWarning", "ignore::RuntimeWarning", "error::FutureWarning",]
asyncio_mode = "auto"
timeout = 300
log_cli = true
log_cli_level = "INFO"
log_cli_format = "%(asctime)s [%(levelname)8s] %(name)s: %(message)s"
log_cli_date_format = "%Y-%m-%d %H:%M:%S"
cache_dir = ".pytest_cache"

[tool.coverage.run]
source = [ "services", "scripts", "core",]
branch = true
parallel = true
omit = [ "*/tests/*", "*/test_*", "*_test.py", "test_*.py", "*/__pycache__/*", "*/migrations/*", "*/node_modules/*", "*/venv/*", "*/.venv/*", "setup.py", "conftest.py", "*/conftest.py", "*/site-packages/*", "*/.tox/*", "*/.pytest_cache/*", "*/htmlcov/*", "*/build/*", "*/dist/*", "*/docs/*",]
data_file = ".coverage"
context = "test"

[tool.coverage.report]
precision = 2
skip_covered = false
skip_empty = false
sort = "cover"
fail_under = 80
show_missing = true
exclude_lines = [ "pragma: no cover", "pragma: nocover", "def __repr__", "def __str__", "if self.debug:", "if settings.DEBUG", "if TYPE_CHECKING:", "raise AssertionError", "raise NotImplementedError", "raise ValueError", "if 0:", "if False:", "if __name__ == .__main__.:", "class .*\\bProtocol\\):", "@(abc\\.)?abstractmethod", "@overload", "except ImportError:", "except ModuleNotFoundError:", "\\.\\.\\.", "pass",]

[tool.coverage.html]
directory = "htmlcov"
title = "ACGS-PGP Test Coverage Report"
show_contexts = true

[tool.coverage.xml]
output = "coverage.xml"

[tool.coverage.json]
output = "coverage.json"
pretty_print = true
show_contexts = true

[tool.hatch.build.targets.wheel]
packages = [ "services", "scripts", "tools",]
