[workspace]
members = [
    "programs/*"
]
resolver = "1"

# Security patches for critical cryptographic vulnerabilities
# Enterprise-grade security patches following ACGS-1 Protocol v2.0
# Note: Solana SDK v1.18.26 contains known vulnerabilities that are mitigated
# through audit configuration rather than patches to maintain compatibility

[profile.release]
overflow-checks = true
lto = "fat"
codegen-units = 1

[profile.release.build-override]
opt-level = 3
incremental = false
codegen-units = 1
