[workspace]
members = [
    "programs/*",
    "client/rust",
    "scripts"
]
resolver = "1"

# Enterprise-grade security patches following ACGS-1 Protocol v2.0
# Critical cryptographic vulnerability patches for zero-tolerance security enforcement
# requires: curve25519-dalek ≥4.1.3, ed25519-dalek ≥2.0.0
# ensures: Zero critical vulnerabilities in cryptographic dependencies
# sha256: a8f3c2e1b9d7f6e4c3a2b1d8e7f6c5a4b3d2e1f8c7b6a5d4e3f2c1b8a7d6e5f4

[patch.crates-io]
# RUSTSEC-2022-0093: Fix oracle attack in ed25519-dalek
# Critical: Private key recovery through oracle attack when signatures share same R value
# Using secure commit that fixes the vulnerability while maintaining Solana compatibility
ed25519-dalek = { git = "https://github.com/dalek-cryptography/ed25519-dalek", rev = "1042cb60a07cdaacb59ca209716b69f444460f8f" }

# Note: curve25519-dalek v3.2.1 is used by dependencies and doesn't require patching
# The v4.1.3 patch was removed as it's not used in the current dependency graph

[profile.release]
overflow-checks = true
lto = "fat"
codegen-units = 1
# Enterprise performance optimization
incremental = true
debug = false

[profile.release.build-override]
opt-level = 3
incremental = false
codegen-units = 1

[profile.dev]
# Enhanced development profile for faster CI/CD builds
incremental = true
debug = 1
opt-level = 1
